# OrthoVision

./: .gitignore  README.md  pyproject.toml
configs/: dedup.yaml  ingest.yaml  paths.yaml  preprocess.yaml  split.yaml  validate.yaml
configs/data/: dentex.yaml  tdd.yaml
configs/experiment/: base.yaml  lora.yaml
configs/model/: biomedclip.yaml  clip_vitb16.yaml
docs/: architecture.md  dataset-schema.md  phase-f0.md  phase-f1.md  phase-f2.md  phase-f3.md  phase-f4.md  repository-layout.md
docs/adr/: 0001-v1-dentex-only.md  0002-supervised-set-train-coco-only.md  0003-lora-head-coop-deferred.md  README.md
manifests/: canonical.dentex.dedup.jsonl  dedup.report.json  ingestion.dentex.jsonl  split.hash.json  test.jsonl  train.jsonl  val.jsonl  validation.dentex.json
notebooks/: colab_train.ipynb
scripts/: build_canonical.py  dedup_canonical.py  ingest_dentex.py  run_baselines.py  run_cv.py  run_lora.py  split_canonical.py  validate_dentex.py
src/orthovision/: config.py  hashing.py
src/orthovision/datamodule/: __init__.py  labels.py
src/orthovision/dedup/: build.py  dedup.py  phash.py
src/orthovision/eval/: bootstrap.py  gates.py  metrics.py
src/orthovision/ingest/: dentex.py  manifest.py  store.py
src/orthovision/labels/: build.py  dentex_coco.py  (+1 more)
tests/: conftest.py  test_bootstrap_gates.py  test_config.py  test_dedup.py  test_hashing.py  test_ingest.py  test_ingest_archives.py  test_kfold.py  test_labels_dentex_coco.py  test_lora.py  test_metrics.py  test_models_torch.py  test_preprocess.py  test_split_build.py  test_stratify.py  test_validate.py
(+13 files in other folders)
