[project]
name = "clip-dental"
version = "0.0.0"
description = "Fine-tuning CLIP for diagnosis on dental panoramic radiographs (OdontoCLIP)"
requires-python = ">=3.10"
readme = "README.md"

# Dependencies are intentionally not pinned during F0 (scaffold phase).
# They will be added and locked when ingestion/validation logic lands (F0 impl).
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
