[project]
name = "orthovision"
version = "0.0.0"
description = "Fine-tuning CLIP for diagnosis on dental panoramic radiographs (OrthoVision)"
requires-python = ">=3.10"
readme = "README.md"

# F0 runtime dependencies (ingestion + validation). Model/training deps
# (open_clip, torch, ...) are added in later phases when that code lands.
dependencies = [
    "huggingface-hub>=0.24",
    "pillow>=10.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
